req 2 - adicionado paragrafo de funcionamento

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
   <header>Minha Lista de Tarefas</header>
+  <main>
+    <p id="funcionamento">Clique duas vezes em um item para marcá-lo como completo</p>
+
+  </main>
   <script src="script.js"></script>
 </body>
 </html>
