--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 <body>
   <header>Minha Lista de Tarefas</header>
   <main>
-    <p id="funcionamento">Clique duas vezes em um item para marcá-lo como completo</p>
-
+    <section>
+      <p id="funcionamento">Clique duas vezes em um item para marcá-lo como completo</p>
+    </section>
+    <section>
+      <input type="text" name="nova-tarefa" id="texto-tarefa">
+    </section>
   </main>
   <script src="script.js"></script>
 </body>
