req 4 - adicionada lista ordenada

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <section>
       <input type="text" name="nova-tarefa" id="texto-tarefa">
     </section>
+    <section>
+      <ol id="lista-tarefas">
+      </ol>
+    </section>
   </main>
   <script src="script.js"></script>
 </body>
