--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <p id="funcionamento">Clique duas vezes em um item para marcá-lo como completo</p>
     </section>
     <section>
-      <input type="text" name="nova-tarefa" id="texto-tarefa">
+      <input type="text" name="nova-tarefa" placeholder="Digite uma nova tarefa aqui" id="texto-tarefa">
+      <button type="submit" id="criar-tarefa">Adicionar tarefa</button>
     </section>
     <section>
       <ol id="lista-tarefas">
