--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
       <button type="submit" id="criar-tarefa">Adicionar tarefa</button>
     </section>
     <section>
-      <ol id="lista-tarefas">
-      </ol>
+      <ol id="lista-tarefas"></ol>
     </section>
   </main>
   <script src="script.js"></script>
