req 10 - adiciona botao de limpar lista

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
     <section>
       <ol id="lista-tarefas"></ol>
     </section>
+    <footer>
+      <button id="apaga-tudo">apaga tudo</button>
+      <button>apaga finalizados</button>
+      <button>cima</button>
+      <button>baixo</button>
+      <button>remove selecionado</button>
+      <button>salvar lista</button>
+    </footer>
   </main>
   <script src="script.js"></script>
 </body>
