req 11 - adiciona funcionalidade do botao 'apaga finalizados'

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </section>
     <footer>
       <button id="apaga-tudo">apaga tudo</button>
-      <button>apaga finalizados</button>
+      <button id="remover-finalizados">apaga finalizados</button>
       <button>cima</button>
       <button>baixo</button>
       <button>remove selecionado</button>
