--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
       <input type="text" name="nova-tarefa" placeholder="Digite uma nova tarefa aqui" id="texto-tarefa">
       <button type="submit" id="criar-tarefa">Adicionar tarefa</button>
     </section>
-    <section>
-      <ol id="lista-tarefas"></ol>
+    <section id="secaoDaLista">
+      <ol class="lista-tarefas" id="lista-tarefas"></ol>
     </section>
     <footer>
       <button id="apaga-tudo">apaga tudo</button>
       <button id="remover-finalizados">apaga finalizados</button>
       <button>cima</button>
       <button>baixo</button>
-      <button>remove selecionado</button>
-      <button>salvar lista</button>
+      <button id="remover-selecionado">remove selecionado</button>
+      <button id="salvar-tarefas">salvar lista</button>
     </footer>
   </main>
   <script src="script.js"></script>
